--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TicketingSystemFrontend.Client\TicketingSystemFrontend.Client.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.7" />
   </ItemGroup>
 
