add folder-file structure

--- a/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CommandHandlers\NewFolder\**" />
+    <EmbeddedResource Remove="CommandHandlers\NewFolder\**" />
+    <None Remove="CommandHandlers\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOs\Articles\" />
+    <Folder Include="DTOs\Tickets\" />
   </ItemGroup>
 
 </Project>
