add create, controller (for create), scalar, AssemblyReference file (.Application), CONNECTION STRING IN LAUNCH SETTINGS! (Very unsafe), fix ArticleRepository (add await), Identity db context, adjust Article, Ticket

--- a/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
@@ -21,4 +21,8 @@
     <Folder Include="DTOs\Tickets\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicketingSystemBackend.Infrastructure\TicketingSystemBackend.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
