--- a/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
@@ -9,6 +9,18 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.6.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TicketingSystemBackend.Application\TicketingSystemBackend.Application.csproj" />
+    <ProjectReference Include="..\TicketingSystemBackend.Domain\TicketingSystemBackend.Domain.csproj" />
+    <ProjectReference Include="..\TicketingSystemBackend.Infrastructure\TicketingSystemBackend.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
