--- a/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //REMOVE THIS AFTER DONE
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; database = TcketingSystemDB ; Trusted_Connection = true;"
+  }
 }
