--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/TicketingSystemFrontend.Client.csproj
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/TicketingSystemFrontend.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
   </ItemGroup>
 
