finish basic crud for Articles (no validation)

--- a/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   //REMOVE THIS AFTER DONE
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; database = TcketingSystemDB ; Trusted_Connection = true;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; database = TicketingSystemDB ; Trusted_Connection = true;"
   }
 }
