some commit to already to comit. I want to cry because of thoose conflicts!!!

--- a/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\TicketingSystemBackend.Application\TicketingSystemBackend.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicketingSystemBackend.Application\TicketingSystemBackend.Application.csproj" />
+  </ItemGroup>
+
 </Project>
