--- a/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
@@ -7,18 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="CommandHandlers\NewFolder\**" />
-    <EmbeddedResource Remove="CommandHandlers\NewFolder\**" />
-    <None Remove="CommandHandlers\NewFolder\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="MediatR" Version="13.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="CommandHandlers\ArticleCategories\" />
     <Folder Include="DTOs\Articles\" />
     <Folder Include="DTOs\Tickets\" />
+    <Folder Include="QueryHandlers\ArticleCategories\" />
   </ItemGroup>
 
   <ItemGroup>
