decouple .Application from .Infrastructure (use interfaces in command and query handlers)

--- a/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TicketingSystemBackend.Infrastructure\TicketingSystemBackend.Infrastructure.csproj" />
+    <ProjectReference Include="..\TicketingSystemBackend.Domain\TicketingSystemBackend.Domain.csproj" />
   </ItemGroup>
 
 </Project>
