--- a/TicketingSystemBackend/TicketingSystemBackend.Infrastructure/TicketingSystemBackend.Infrastructure.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Infrastructure/TicketingSystemBackend.Infrastructure.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TicketingSystemBackend.Application\TicketingSystemBackend.Application.csproj" />
     <ProjectReference Include="..\TicketingSystemBackend.Domain\TicketingSystemBackend.Domain.csproj" />
   </ItemGroup>
 
