--- a/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
@@ -2,7 +2,9 @@
   "Jwt": {
     "Key": "YourSuperSecretKey123456789012345254534534524412432", // Replace with a secure key (at least 16 characters)
     "Issuer": "https://localhost:7059",
-    "Audience": "https://localhost:7059"
+    "Audience": "https://localhost:7059",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7
   },
   "Logging": {
     "LogLevel": {
