now the token generation and validation works well, at least in backend

--- a/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Jwt": {
     "Key": "YourSuperSecretKey123456789012345254534534524412432", // Replace with a secure key (at least 16 characters)
-    "Issuer": "https://localhost:7059",
-    "Audience": "https://localhost:7059",
+    "Authority": "https://localhost:7299",
+    "Issuer": "https://localhost:7299",
+    "Audience": "https://localhost:7299",
     "AccessTokenExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
   },
