--- a/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Application/TicketingSystemBackend.Application.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <Folder Include="DTOs\Articles\" />
     <Folder Include="DTOs\Tickets\" />
+    <Folder Include="Queries\Auth\" />
+    <Folder Include="QueryHandlers\Auth\" />
   </ItemGroup>
 
   <ItemGroup>
