--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\TicketingSystemFrontend.Client\TicketingSystemFrontend.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.7" />
+    <PackageReference Include="MudBlazor" Version="8.11.0" />
   </ItemGroup>
 
 </Project>
