--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/TicketingSystemFrontend.Client.csproj
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/TicketingSystemFrontend.Client.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Articles\ArticleComponents\" />
+  </ItemGroup>
+
 </Project>
