--- a/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\TicketingSystemBackend.Application\TicketingSystemBackend.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
