--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\TicketingSystemFrontend.Client\Pages\Articles\ArticleCategoryCard.razor" Link="ArticleCategoryCard.razor" />
     <None Include="..\TicketingSystemFrontend.Client\Pages\Component.razor" Link="Component.razor" />
   </ItemGroup>
 
