--- a/.gitignore
+++ b/.gitignore
@@ -427,5 +427,4 @@ FodyWeavers.xsd
 *.msm
 *.msp
 
-/wwwroot/uploads/*
-/wwwroot/uploads/
+TicketingSystemBackend/TicketingSystemBackend.Api/wwwroot/uploads/
