--- a/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
+++ b/TicketingSystemBackend/TicketingSystemBackend.Api/TicketingSystemBackend.Api.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\uploads\" />
+    <Folder Include="wwwroot\uploads\articles\" />
   </ItemGroup>
 
 </Project>
