this is first step into fixing the auth and http only cookies. \n login page now works with cookies (not good, but at least don't crushes)

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/appsettings.json
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiBaseUrl": "https://localhost:7299"
+  "ApiBaseUrl": "https://localhost:7299",
+  "ServerBaseUrl": "https://localhost:7044"
 }
