--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
     <ProjectReference Include="..\TicketingSystemFrontend.Client\TicketingSystemFrontend.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.7" />
